<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/profile_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fname"
            android:inputType="textCapWords"
            android:text=""/>
        <EditText
            android:id="@+id/profile_lname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lname"
            android:inputType="textCapWords"
            android:text=""/>

        <EditText
            android:id="@+id/profile_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usauID"
            android:inputType="number"
            android:text=""/>

        <EditText
            android:id="@+id/position_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/position"
            android:inputType="textCapWords"
            android:text=""/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="250">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/profile_teams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/teams"
                android:lines="4"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:text=""/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="250">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/profile_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bio"
                android:lines="4"
                android:gravity="top|start"
                android:text=""/>
        </android.support.design.widget.TextInputLayout>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group_i_am"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_am"/>

            <RadioButton
                android:id="@+id/i_am_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"/>
            <RadioButton
                android:id="@+id/i_am_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"/>
        </RadioGroup>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radio_group_looking_for"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/looking_for"/>

            <RadioButton android:id="@+id/looking_for_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"/>
            <RadioButton android:id="@+id/looking_for_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"/>
            <RadioButton
                android:id="@+id/looking_for_both"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/profile_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"/>

            <Button
                android:id="@+id/profile_logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log Out"/>

            <Button
                android:id="@+id/profile_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"/>

            <Button
                android:id="@+id/profile_admin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Admin"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
